MongoExpress-MongoDB/mongo-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: mongodb-depl
  labels:
    app: mongodb
    tier: backend
spec:
  replicas: 1
  selector: 
    matchLabels: 
      app: mongodb
  template:
    metadata:
      name: mongo-app
      labels:
        app: mongodb
        tier: database
    spec:
      containers:
      - name: mongodb
        image: mongo
        ports:
        - containerPort: 27017
---

apiVersion: v1
kind: Service
metadata:
  name: mongo-service
spec:
  selector:
    app: mongodb #label with name mongo-depl
  ports:
  - name: mongo-port
    protocol: TCP
    port: 27017
    targetPort: 27017
