MongoExpress-MongoDB/mongo-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dashboard-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
   - host: foo.bar.com
     http:
       paths:
        - path: /
          pathType: Prefix
          backend:
            service:
             name: mongo-express-service
             port:
               number: 8081
